--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "framer-motion": "^10.16.4",
+    "mongoose": "^7.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.28",
     "tailwindcss": "3.3.3"
   }
 }
